--- a/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
@@ -33,7 +33,7 @@
                 {% set translation = 'BusybeePersonBundle' %}
                 {% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
                 {% set disabled = '' %}
-                {% if name == 'staff' and form.staff.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
+                {% if name == 'staff' and not isStaff() %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'student' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'immigration' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'grades' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
@@ -48,7 +48,7 @@
             {% for name,tab in tabs.getTabs %}
                 {% set translation = 'BusybeePersonBundle' %}
                 {% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
-                {% if name == 'staff' and form.staff.person is not defined %}
+                {% if name == 'staff' and not isStaff() %}
                     <div class="tab-pane" id="{{ name }}">
                         {% include 'BusybeeTemplateBundle:Forms:emptyTab.html.twig' with {'name': 'person.staff.title'|trans({'%name%': form.vars.value.formatName}) } %}
                     </div>
