--- a/src/Busybee/People/PersonBundle/Resources/views/Person/person.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/person.html.twig
@@ -36,8 +36,12 @@
                         {% if isStaff(form.vars.value) %}
                             {% set staffOn = true %}
                         {% endif %}
+                        {% set additional = {id: 'staffToggle' ~ form.vars.value.id} %}
+                        {% if not staffOn and not canBeStaff() %}
+                            {% set additional = additional|merge({disabled: 'disabled'}) %}
+                        {% endif %}
                         <div class="form-group">
-                            {{ onOffButton({value: staffOn, on: {class: 'btn btn-success halflings halflings-thumbs-up'}, off: {class: 'btn btn-primary halflings halflings-thumbs-down'}})|raw }}
+                            {{ onOffButton({value: staffOn, on: {class: 'staffToggle btn btn-success halflings halflings-thumbs-up', additional: additional}, off: {class: 'staffToggle btn btn-primary halflings halflings-thumbs-down', additional: additional}})|raw }}
                             <label class="control-label small text-left">{{ 'person.staff.question.label'|trans }}</label>
                         </div>
                         {% set offset = offset - 2 %}
