--- a/src/Busybee/People/StaffBundle/Resources/views/Person/staff.html.twig
+++ b/src/Busybee/People/StaffBundle/Resources/views/Person/staff.html.twig
@@ -10,19 +10,18 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6 well">
-                    {{ form_row(form.staff.staffType) }}
-                    {{ form_widget(form.staff.person) }}
+                    {{ form_row(form.staffType) }}
                 </div>
                 <div class="col-sm-6 well">
-                    {{ form_row(form.staff.jobTitle) }}
+                    {{ form_row(form.jobTitle) }}
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 well">
-                    {{ form_row(form.staff.house) }}
+                    {{ form_row(form.house) }}
                 </div>
                 <div class="col-sm-6 well">
-                    {{ form_row(form.staff.homeroom) }}
+                    {#{{ form_row(form.staff.homeroom) }}#}
                 </div>
             </div>
         </div>
